# cosmic-sys-lib

./: CMakeLists.txt  README.md
cmake/: cosmic-config.cmake.in  cosmic.pc.in
docs/: INSIGHTS.md  SYSTEM1_SYSTEM2_DIAGRAMS.md  system_terms.md
examples/: basic_usage.cpp  enneagram.dot  oeis_demo.cpp  system1_system2_demo.cpp  system3.dot  terms_demo.cpp
include/cosmic/: cosmic.hpp  geometry.hpp  operations.hpp  system.hpp  system1.hpp  system2.hpp  terms.hpp  trees.hpp
src/: geometry.cpp  operations.cpp  system.cpp  terms.cpp
tests/: test_geometry.cpp  test_operations.cpp  test_system.cpp
